
[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed
- Fix {pull}2526[#2526]

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-4.x]]
=== Ruby Agent version 4.x

[[release-notes-4.6.0]]
==== 4.6.0

[float]
===== Changed
- Expanded filtering to sanitize any key that contains the string 'auth' {pull}1266[#1266]
- Rename `log_ecs_formatting` option to `log_ecs_reformatting`, deprecate old option name {pull}1248[#1248]

[[release-notes-4.5.1]]
==== 4.5.1

[float]
===== Changed

- Update elasticsearch spy to use new transport gem name {pull}1257[#1257]

===== Fixed

- Fixed dependencies to allow CI to build successfully {pull}1259[#1259]
- Fixed warnings related to TimeTask timeouts {pull}1255[#1255]

[[release-notes-4.5.0]]
==== 4.5.0

[float]
===== Changed

- Stop collecting the field `http.request.socket.encrypted` {pull}1181[#1181]

[float]
===== Fixed

- Fixed MongoDB spy thread safety {pull}1202[#1202]
- Fixed span context fields for DynamoDB instrumentation {pull}1178[#1178]
- Fixed span context fields for S3 instrumentation {pull}1179[#1179]
- Update user agent info to match spec {pull}1182[#1182]

[[release-notes-4.4.0]]
==== 4.4.0

[float]
===== Added
- Optional span to be ended instead of current span {pull}1039[#1039]
- Config option `log_ecs_formatting` {pull}1053[#1053]

[float]
===== Fixed
- Fixed detecting Linux on Alpine for CPU/MEM metrics {pull}1057[#1057]

[[release-notes-4.3.0]]
==== 4.3.0

[float]
===== Added

- Add JVM memory metrics {pull}1040[#1040]

[[release-notes-4.2.0]]
==== 4.2.0

[float]
===== Added

- Add support for AWS Storage Table/CosmosDB {pull}999[#999]

[float]
===== Fixed

- Align HTTP span types/subtypes with spec {pull}1014[#1014]
- Passing a full URL as a path to `Net::HTTP` {pull}1029[#1029]