@@ -49,7 +49,7 @@ module ElasticAPM
             context =
               ElasticAPM.build_context rack_env: env, for_type: :transaction
 
-            ElasticAPM.with_transaction context: context do |txn|
+            ElasticAPM.with_transaction('/somewhere/in/there', context: context) do |txn|
               ElasticAPM.set_label(:my_tag, '123')
               ElasticAPM.set_custom_context(all_the_other_things: 'blah blah')
               ElasticAPM.set_user(Struct.new(:id).new(321))
@@ -62,6 +62,7 @@ module ElasticAPM
         error = @intercepted.errors.last
         expect(error.transaction).to eq(sampled: true, type: 'custom')
         expect(error.transaction_id).to eq transaction.id
+        expect(error.transaction_name).to eq transaction.name
         expect(error.trace_id).to eq transaction.trace_id
         expect(error.context.labels).to match(my_tag: '123', more: 'totes')
         expect(error.context.custom)
